Style: increase default window size and fix clipping

--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -7,6 +7,11 @@
   -fx-font-family: SansSerif;
 }
 
+.root-element {
+  -fx-pref-width: 1000px;
+  -fx-pref-height: 750px;
+}
+
 .card {
   -fx-border-color: -fx-primary-border-color;
   -fx-border-width: 1px;
